Fixed chat window alignment and size issue

--- a/static/style.css
+++ b/static/style.css
@@ -6,15 +6,17 @@
     max-width: 40rem;
 }
 
+.chat-window {
+    height: calc(100vh - 7rem);
+    overflow-y: scroll;
+    margin: 0;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 .chat-input {
     height: 7rem;
     text-align: center;
-}
-
-.chat-window {
-    max-height: calc(100vh - 7rem);
-    overflow-y: scroll;
-    margin: 0;
 }
 
 .chat-form {
